[package]
authors = ["Matteo Pisani <matteo.pisani.91@gmail.com>"]
categories = ["command-line-utilities", "api-bindings", "web-programming::http-client", "web-programming::websocket"]
description = "🦐 Command-line interface (CLI) for Kraken exchange WebSockets API | Written in Rust"
documentation = "https://docs.rs/gambero/"
edition = "2018"
keywords = ["rust", "kraken", "exchange", "api", "cryptocurrency"]
license = "MIT"
name = "gambero"
readme = "README.md"
repository = "https://github.com/xonoxitron/gambero"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-tungstenite = {version = "0.13.0", features = ["async-std-runtime", "async-tls"]}
futures = "0.3.13"
squalo = "0.1.6"
tokio = {version = "1.2.0", features = ["full"]}
